--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,22 @@ docs/site/
 # committed for packages, but should be committed for applications that require a static
 # environment.
 Manifest.toml
+
+# Quarto
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+
+/.quarto/
+
+/agujournal2019.cls
+/trackchanges.sty
+/docs
+/site_libs
+
+/.luarc.json
+
+# vscode
+.vscode/*
+
+# MacOS nonsense
+.DS_Store
