--- a/code/Project.toml
+++ b/code/Project.toml
@@ -4,9 +4,17 @@ authors = ["Tanya Strydom <tanya.strydom@icloud.com>"]
 version = "0.1.0"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 SpeciesInteractionNetworks = "49e116ef-912f-4766-9e56-896a49944adc"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
+CSV = "0.10.15"
+DataFrames = "1.7.0"
+JLD2 = "0.5.11"
+ProgressMeter = "1.10.2"
 SpeciesInteractionNetworks = "0.0.1"
 Statistics = "1.11.1"
