--- a/code/Project.toml
+++ b/code/Project.toml
@@ -1,20 +1,22 @@
-name = "code"
-uuid = "5bb208b6-26a0-44f3-a20c-bf9107d67908"
-authors = ["Tanya Strydom <tanya.strydom@icloud.com>"]
-version = "0.1.0"
-
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
+Normalization = "be38d6a3-8366-4a42-ad57-222272b5bbe7"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 SpeciesInteractionNetworks = "49e116ef-912f-4766-9e56-896a49944adc"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 CSV = "0.10.15"
 DataFrames = "1.7.0"
 JLD2 = "0.5.11"
+LinearAlgebra = "1.11.0"
+MultivariateStats = "0.10.3"
+Normalization = "0.7.3"
 ProgressMeter = "1.10.2"
 SpeciesInteractionNetworks = "0.0.1"
 Statistics = "1.11.1"
