--- a/code/Project.toml
+++ b/code/Project.toml
@@ -5,6 +5,7 @@ JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
 Normalization = "be38d6a3-8366-4a42-ad57-222272b5bbe7"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 SpeciesInteractionNetworks = "49e116ef-912f-4766-9e56-896a49944adc"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
