--- a/code/Project.toml
+++ b/code/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
+Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Extinctions = "cd114cb6-7982-4017-a01c-1032758e0eff"
 Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
